Supported Flight selection page
- Added code to consume Flight selection page API
- Added Jacoco dependency
- Added validation framework for requests
- Saved the Airport response in backup.json
- Moved the ITs to controller